@@ -1,3 +1,32 @@
+
+# 🎯 QUIZ APP – JavaFX Based Desktop Application
+
+A modern, interactive desktop **Quiz Application** developed using **JavaFX** and **MySQL**.  
+This app is designed to conduct programming quizzes with real-time scoring, timer-based questions, and detailed performance tracking.
+
+---
+## 🚀 Features
+- 🔐 Secure User Login & Registration
+- ⏱️ Time-limited Questions (15 seconds per question)
+- 🧠 MCQ-based Programming Quizzes
+- 📊 Real-time Score Calculation
+- 🏆 Leaderboard System
+- 💾 MySQL Database Integration
+- 🖥️ User-friendly JavaFX Interface
+- ❌ Error Handling & Validation
+---
+
+## 🛠️ Technologies Used
+- **Java**
+- **JavaFX**
+- **FXML**
+- **MySQL**
+- **JDBC**
+- **MVC Architecture**
+
+---
+
+## 📁 **Project Structure**
 QuizApp/
 │
 ├─ src/
@@ -20,24 +49,77 @@ QuizApp/
 │           │
 │           └─ images/
 │               └─ icon.png
-Database Setup:
+## ⚙️ **Installation & Setup**
 
+### **Prerequisites**
+- Java JDK (8 or higher)
+- JavaFX SDK
+- MySQL Server
+- IDE (IntelliJ IDEA / Eclipse / NetBeans)
+
+---
+
+## 🗄️ **Database Setup**
+
+1. Open **MySQL Server**
+2. Create a new database
+```sql
 CREATE DATABASE quiz_app;
+3.Select the database
 USE quiz_app;
-
-Users Table:
+4.Create required tables (example)
 CREATE TABLE users (
-  id INT AUTO_INCREMENT PRIMARY KEY,
-  name VARCHAR(100),
-  email VARCHAR(100) UNIQUE
+    id INT AUTO_INCREMENT PRIMARY KEY,
+    name VARCHAR(100),
+    email VARCHAR(100) UNIQUE,
+    password VARCHAR(100)
 );
 
-Scores Table:
-CREATE TABLE scores (
-  id INT AUTO_INCREMENT PRIMARY KEY,
-  user_id VARCHAR(100),
-  user_email VARCHAR(100),
-  correct_score INT,
-  wrong_score INT
+CREATE TABLE questions (
+    id INT AUTO_INCREMENT PRIMARY KEY,
+    question TEXT,
+    option_a VARCHAR(255),
+    option_b VARCHAR(255),
+    option_c VARCHAR(255),
+    option_d VARCHAR(255),
+    correct_option VARCHAR(5)
 );
+
+CREATE TABLE scores (
+    id INT AUTO_INCREMENT PRIMARY KEY,
+    user_id INT,
+    score INT,
+    FOREIGN KEY (user_id) REFERENCES users(id)
+);
+5.Update database credentials in DBConnection.java
+String url = "jdbc:mysql://localhost:3306/quiz_app";
+String user = "root";
+String password = "your_password";
+
+---
+## ▶️ **Running the Project**
+1.Clone the repository:
+**`git clone https://github.com/Jannatulmona/quiz-app.git`**
+2. Open the project in your IDE  
+3. Add **mysql-connector-j.jar** to project libraries  
+4. Configure JavaFX VM options (replace with your JavaFX path):
+```bash
+--module-path /path/to/javafx/lib --add-modules javafx.controls,javafx.fxml
+5.Run the application using:
+Main.java
+
+---
+🧩 Architecture (MVC)
+
+Model – Data classes & database logic
+
+View – JavaFX UI (FXML files)
+
+Controller – Application logic & event handling
+
+---
+
+## 👀 **Preview**
+### **Login Screen**
+![Login Screen]<img width="651" height="559" alt="Screenshot 2025-12-06 180558" src="https://github.com/user-attachments/assets/1ea0ba93-3e8b-47d7-ac7f-6f93bcfd7f9b" />
 
